# uuid7-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
examples/: uuid7.rs
src/: entry.rs  gen7.rs  generator.rs  global_gen.rs  id.rs  lib.rs  uuid.rs  v4.rs  v7.rs
src/generator/: tests.rs  with_rand010.rs  with_rand08.rs  with_rand09.rs
