[package]
name = "uuid7"
version = "1.1.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "A Rust implementation of UUID version 7"
repository = "https://github.com/LiosK/uuid7-rs"

[dependencies]
fstr = { version = "0.2", default-features = false }
rand_core06 = { package = "rand_core", version = "0.6", default-features = false }
rand = { version = "0.9", optional = true }
rand_chacha = { version = "0.9", optional = true }
rand_core09 = { package = "rand_core", version = "0.9", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
rand = "0.9"
regex = { version = "1.9", default-features = false, features = ["std"] }
serde_test = "1.0"

[features]
default = ["global_gen"]
std = ["fstr/std"]
rand09 = ["dep:rand_core09"]
global_gen = ["std", "dep:rand", "dep:rand_chacha"]
serde = ["dep:serde"]
uuid = ["dep:uuid"]

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
