[package]
name = "uuid7"
version = "1.5.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"
description = "A Rust implementation of UUID version 7"
repository = "https://github.com/LiosK/uuid7-rs"
documentation = "https://docs.rs/uuid7"
keywords = ["identifier", "uuid", "guid"]

[features]
default = ["global_gen"]
std = ["fstr/std"]
global_gen = ["std", "dep:rand", "dep:rand_chacha"]
rand09 = ["dep:rand_core09"]
rand010 = ["dep:rand_core010"]
serde = ["dep:serde"]
uuid = ["dep:uuid"]

rand08 = [] # Listed to allow explicit enabling of `rand` v0.8 integration

[dependencies]
fstr = { version = "0.2", default-features = false }
rand_core06 = { package = "rand_core", version = "0.6", default-features = false }
rand = { version = "0.9", optional = true }
rand_chacha = { version = "0.9", optional = true }
rand_core09 = { package = "rand_core", version = "0.9", default-features = false, optional = true }
rand_core010 = { package = "rand_core", version = "0.10", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
rand = "0.9"
regex = { version = "1.12", default-features = false, features = ["std"] }
serde_test = "1.0"

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
